--- a/xiniStudent/src/main/res/layout/activity_pg_details.xml
+++ b/xiniStudent/src/main/res/layout/activity_pg_details.xml
@@ -35,13 +35,6 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp" />
 
-            <include
-                android:id="@+id/include3"
-                layout="@layout/layout_pg_reviews"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp" />
 
             <include
                 android:id="@+id/include4"
@@ -49,6 +42,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="XiNi 2021"
+                android:paddingTop="20dp"
+                android:paddingBottom="10dp"/>
         </LinearLayout>
     </ScrollView>
 
