--- a/xiniStudent/src/main/res/layout/text_view.xml
+++ b/xiniStudent/src/main/res/layout/text_view.xml
@@ -1,8 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/textView_LinearLayout"
+    android:id="@+id/sendMessageLinearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    tools:ignore="RtlHardcoded"/>
+    android:layout_marginTop="25dp"
+    android:orientation="horizontal"
+    tools:ignore="RtlHardcoded">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.7"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="left"
+        android:layout_marginLeft="5dp"
+        app:layout_constraintWidth_max="wrap"
+        >
+        <TextView
+            android:id="@+id/chatSentMessageTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/received_message"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@color/colorPrimary"
+            android:gravity="left"
+            android:textSize="17dp"
+            android:padding="10dp"
+            app:layout_constraintWidth_max="wrap"
+            android:visibility="gone"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintWidth_default="percent"
+        app:layout_constraintWidth_percent="0.7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="5dp"
+        app:layout_constraintWidth_max="wrap"
+        >
+        <TextView
+            android:id="@+id/chatRecievedMessageTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/sent_message"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textColor="@color/colorPrimary"
+            android:gravity="left"
+            android:text="yugank sharma doesnt care that much about anyone so dont bother that he"
+            android:textSize="17dp"
+            android:padding="10dp"
+            app:layout_constraintWidth_max="wrap"
+            android:visibility="gone"
+            />
+        <ImageView
+            android:id="@+id/chatRecievedMessage_doubleTick"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="gone"
+
+            app:layout_constraintBottom_toBottomOf="@+id/chatRecievedMessageTextView"
+            app:layout_constraintEnd_toEndOf="@+id/chatRecievedMessageTextView"
+            app:layout_constraintHeight_default="percent"
+            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintHorizontal_bias="0.882"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.9"
+            app:layout_constraintWidth_default="percent"
+            app:layout_constraintWidth_percent="0.3" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
